🚧 text overflow fixed !

--- a/sass/restaurant.scss
+++ b/sass/restaurant.scss
@@ -116,26 +116,19 @@ a{
                     font-size: 18px;
                 }
                 .item-subtitle{
-               
                     margin-top: 5px;
                     font-weight: 200;
-                    font-size: 17px;
+                    font-size: 15px;
                 }
                 .item-price p {
                     margin: 0;
                     font-size: 12px;
                 }
-                .item-title, .item-subtitle {
-                    margin: 0;
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                }
             }
             /* icone qui apparait pour le survol d'un item */
             .check-icon {
                 display: none; 
-                width: 5%;
+                width: 15%;
                 height: 100%;
                 border-top-right-radius: 15px;
                 border-bottom-right-radius: 15px;
@@ -150,7 +143,7 @@ a{
                @include m.flex-center();
                 position: absolute;
                 right: 0;
-                top: 50%;
+                top: 49%;
                 transform: translateY(-50%);
                 background-color: v.$color-tertiary;
             }
@@ -159,11 +152,18 @@ a{
                 right: 70px;
                 bottom: 10px;
             }
+            .item-title, .item-subtitle {
+                // margin: 0;
+                max-width: 90%;
+                overflow: hidden;
+                text-overflow: ellipsis;
+                white-space: nowrap;
             }
         }
     }
+}
     .order{
-        width: 50%;
+        width: 70%;
         margin: auto;
         padding: 12px;
         display: flex;
